--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,6 +7,9 @@
 </head>
 <body>
      <h3>All Listings </h3>
+     <form action="/listings/new" method="GET">
+          <button>Create New Listings</button>
+     </form>
      <ul>
 <%for(let listings of allListings){ %>
      <li><a href="/listings/<%=listings._id%>"><%= listings.title %></a></li>
