--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -19,6 +19,9 @@
 </ul>
 <br>
 <a href="/listings/<%= listing._id %>/edit">Edit</a>
-
+<br><br>
+ <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+     <button>Delete this listing</button>
+ </form>
 </body>
 </html>
