--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>WanderLust</title>
-</head>
+<% layout('/layouts/boilerplate') %>
 <body>
      <h3>All Listings </h3>
      <form action="/listings/new" method="GET">
@@ -18,4 +12,3 @@
     
     
 </body>
-</html>
