--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,16 @@
-body{
+/* body{
      background-color: pink;
+} */
+
+/* NavBar */
+.navbar{
+     height: 5rem;
+     background-color: white !important;
+}
+.fa-compass {
+     color: #fe424d;
+     font-size: 2rem;
+}
+.nav-link{
+     color: #222222 !important;
 }
