--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
-/* body{
+body{
      background-color: pink;
-} */
+     font-family: "Plus Jakarta Sans", sans-serif !important;
+}
 
 /* NavBar */
 .navbar{
@@ -46,3 +47,37 @@
      justify-content: center;
      align-items: space-evenly;
 }
+
+/* Crads */
+.card{
+     border: none !important;
+     margin-bottom: 2rem;
+}
+.card-img-top{
+     border-radius: 1rem !important;
+     width: 100% !important;
+     object-fit: cover !important;
+}
+.card-body{
+     padding: 0 !important;
+}
+
+.card-text p{
+     font-weight: 400;
+}
+
+.listing-link{
+     text-decoration: none;
+}
+
+
+/* card-effect */
+.card-img-overlay{
+     opacity: 0;
+}
+
+.card-img-overlay:hover{
+     opacity: 0.2;
+     background-color: white;
+}
+
