--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,14 +1,29 @@
 <% layout('/layouts/boilerplate') %>
-<body>
-     <h3>All Listings </h3>
-           <!-- <form action="/listings/new" method="GET">
+
+     <body>
+          <h3>All Listings </h3>
+          <!-- <form action="/listings/new" method="GET">
           <button>Create New Listings</button>
      </form> -->
-     <ul>
-<%for(let listings of allListings){ %>
-     <li><a href="/listings/<%=listings._id%>"><%= listings.title %></a></li>
-<%}%>
-     </ul>
-    
-    
-</body>    
+          <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1" >
+               <%for(let listings of allListings){ %>
+                    <a href="/listings/<%=listings._id%>" class="listing-link">
+               <div class="card col" >
+                    <img src="<%= listings.image.url %>" class="card-img-top" alt="listings_image" style="height: 20rem">
+                     <div class="card-img-overlay"></div>
+                    <div class="card-body">
+                         <p class="card-text">
+                             <b> <%= listings.title %></b><br>
+                             &#8377;<%= listings.price.toLocaleString("en-IN")%>
+
+                         </p>
+                    </div>
+               </div>
+               </a>
+               <%}%>
+          </div>
+
+               
+
+
+     </body>
