--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,12 @@
 body{
      background-color: pink;
      font-family: "Plus Jakarta Sans", sans-serif !important;
+     display: flex;
+     flex-direction: column;
+     min-height: 100vh;
+}
+.container{
+     flex: 1;
 }
 
 /* NavBar */
@@ -79,5 +85,10 @@ body{
 .card-img-overlay:hover{
      opacity: 0.2;
      background-color: white;
+}
+/* new page */
+.add-btn{
+     background-color: #fe424d !important;
+     border: none !important;
 }
 
