Styling edit Listing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,3 +92,9 @@ body{
      border: none !important;
 }
 
+/* Edit page  */
+.edit-btn{
+     background-color: #fe424d !important;
+     border: none !important;
+}
+
