--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,20 +1,26 @@
 <% layout('/layouts/boilerplate') %>
-<body>
+<div class="row">
+    <div class="col-8 offset-3 mt-3">
      <h3>Listing details:</h3>
+     </div>
+     <div class="card col-6 offset-3" >
+  <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+  <div class="card-body">
+    <p class="card-text"><b></b><%= listing.title %><b></b><br>
+    <%= listing.description %> <br>
+    &#8377;<%= listing.price.toLocaleString("en-IN")%> <br>
+    <%= listing.location %> <br>
+    <%= listing.country %>
+    </p>
+  </div>
+</div>
 
-<ul>
-  
-    <li><%= listing.title %></li>
-    <li><%= listing.description %></li>
-    <li>&#8377;<%= listing.price.toLocaleString("en-IN")%></li>
-    <li><%= listing.location %></li>
-    <li><%= listing.country %></li>
-
-</ul>
 <br>
-<a href="/listings/<%= listing._id %>/edit">Edit</a>
-<br><br>
- <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-     <button>Delete this listing</button>
+<div class="btns">
+<a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+
+   <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+     <button class="btn btn-dark  offset-5">Delete</button>
  </form>
-</body>
+</div>
+</div>
