--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,36 +2,46 @@
 <div class="row mt-3">
      <div class="col-8 offset-2">
        <h3>Create a New Listing</h3>
-     <form method="post" action="/listings/<%=listing._id %>?_method=PUT">
+     <form method="post" action="/listings/<%=listing._id %>?_method=PUT" novalidate class="needs-validation">
           <div class="mb-3">
                <label for="title" class="form-label">Title</label>
-               <input name="listing[title]" type="text" value="<%=listing.title%>" class="form-control">
+               <input name="listing[title]" type="text" value="<%=listing.title%>" class="form-control" required>
+                <div class="valid-feedback">Title look good!</div>
            </div>
-          <div class="md-3">
+          <div class="mb-3">
             <label for="description" class="form-label">Description</label>       
-             <textarea name="listing[description]" class="form-control"><%= listing.description %></textarea>
+             <textarea name="listing[description]" class="form-control" required><%= listing.description %></textarea>
+             <div class="invalid-feedback">Please enter the description</div>
            </div>
           <div class="mb-3">
            <label for="image" class="form-label">Image Link</label>
-           <input name="listing[image]" type="text" value="<%=listing.image%>" class="form-control">
+           <input name="listing[image]" type="text" value="<%=listing.image%>" class="form-control" required>
+            <div class="invalid-feedback">Please enter the image link</div>
           </div>
           <div class="row">
             <div class="mb-3 col-md-4">
            <label for="price" class="form-label">Price</label>  
-            <input name="listing[price]" type="number" value="<%=listing.price%>" class="form-control">
+            <input name="listing[price]" type="number" value="<%=listing.price%>" class="form-control" required>
+            <div class="invalid-feedback">Please enter valid price</div>
            </div>
+           
           <div class="mb-3 col-md-8">
            <label for="country" class="form-label" >Country</label>  
-          <input name="listing[country]" type="text" value="<%=listing.country%>" class="form-control">
+          <input name="listing[country]" type="text" value="<%=listing.country%>" class="form-control" required>
+          <div class="invalid-feedback">Please enter the country
+           </div>
            </div>
           </div>
           
           <div class="mb-3">
            <label for="location" class="form-label">Location</label>  
-           <input name="listing[location]" type="text" value="<%=listing.location%>" class="form-control">
+           <input name="listing[location]" type="text" value="<%=listing.location%>" class="form-control" required>
+            <div class="invalid-feedback">Please enter the location</div>
            </div>
-          <br><br>
+          <br>
+          <div class="mb-3">
           <button class="btn btn-dark edit-btn">Edit</button>
+          </div>
      </form>
      </div>
 </div>
