--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -20,7 +20,7 @@
           </div>
           <div class="mb-3">
                 <label for="image" class="form-label">Image Link</label>
-           <input name="listing[image]" 
+           <input name="listing[image][url]" 
            placeholder="enter image URL/link" 
            type="text"
            class="form-control">
