--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,12 +1,12 @@
 <% layout('/layouts/boilerplate') %>
 <div class="row">
     <div class="col-8 offset-3 mt-3">
-     <h3>Listing details:</h3>
+     <h3><%= listing.title %></h3>
      </div>
      <div class="card col-6 offset-3" >
   <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
   <div class="card-body">
-    <p class="card-text"><b></b><%= listing.title %><b></b><br>
+    <p class="card-text">
     <%= listing.description %> <br>
     &#8377;<%= listing.price.toLocaleString("en-IN")%> <br>
     <%= listing.location %> <br>
