--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -23,4 +23,21 @@
      <button class="btn btn-dark  offset-5">Delete</button>
  </form>
 </div>
+<hr>
+<div class="col-8 offset-3 mb-3">
+  <h4>Leave a Review</h4>
+  <form action="">
+    <div class="mb-3">
+      <label for="rating" class="form-label">Rating</label>
+      <input type="range" min="1" max="5" step="1" id="rating" name="review[rating]" class="form-range">
+    </div>
+    <div class="mb-3">
+    <label for="comment" class="form-label">Comment</label>
+    <textarea id="comment" name="review[comment]" rows="4" cols="50" class="form-control"></textarea>
+    </div>
+    <div class="mb-3">
+      <button class="btn btn-dark">Submit</button>
+    </div>
+  </form>
+</div>
 </div>
