--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -26,7 +26,7 @@
 <hr>
 <div class="col-8 offset-3 mb-3">
   <h4>Leave a Review</h4>
-  <form action="">
+  <form action="/listings/<%=listing._id%>/reviews" method="POST">
     <div class="mb-3">
       <label for="rating" class="form-label">Rating</label>
       <input type="range" min="1" max="5" step="1" id="rating" name="review[rating]" class="form-range">
