--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -26,14 +26,17 @@
 <hr>
 <div class="col-8 offset-3 mb-3">
   <h4>Leave a Review</h4>
-  <form action="/listings/<%=listing._id%>/reviews" method="POST">
+  <form action="/listings/<%=listing._id%>/reviews" method="POST" novalidate class="needs-validation">
     <div class="mb-3">
       <label for="rating" class="form-label">Rating</label>
       <input type="range" min="1" max="5" step="1" id="rating" name="review[rating]" class="form-range">
     </div>
     <div class="mb-3">
     <label for="comment" class="form-label">Comment</label>
-    <textarea id="comment" name="review[comment]" rows="4" cols="50" class="form-control"></textarea>
+    <textarea id="comment" name="review[comment]" rows="4" cols="50" class="form-control" required></textarea>
+    <div class="invalid-feedback">
+      Please submit some comment for review.
+    </div>
     </div>
     <div class="mb-3">
       <button class="btn btn-dark">Submit</button>
