--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -8,7 +8,7 @@
           <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1" >
                <%for(let listings of allListings){ %>
                     <a href="/listings/<%=listings._id%>" class="listing-link">
-               <div class="card col" >
+               <div class="card col listing-card" >
                     <img src="<%= listings.image.url %>" class="card-img-top" alt="listings_image" style="height: 20rem">
                      <div class="card-img-overlay"></div>
                     <div class="card-body">
