--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,7 +3,7 @@
     <div class="col-8 offset-3 mt-3">
      <h3><%= listing.title %></h3>
      </div>
-     <div class="card col-6 offset-3" >
+     <div class="card col-6 offset-3 listing-card" >
   <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
   <div class="card-body">
     <p class="card-text">
@@ -43,15 +43,17 @@
     </div>
   </form>
   <hr>
-  <h4>All Reviews</h4>
-  <ul>
-    <% for(let review of listing.reviews){ %>
-      <li>
-        <strong>Rating:</strong> <%= review.rating %> star<br>
-        <strong>Comment:</strong> <%= review.comment %>
-      </li>
-      <hr>
+  <p><b>All Reviews </b></p>
+  <div class="row">
+   <% for(let review of listing.reviews){ %>
+      <div class="card col-5 mb-3  ms-3">
+        <div class="card-body">
+          <h5 class="card-title">Jan Doe</h5>
+          <p class="card-text"><%= review.comment %></p>
+          <p class="card-text"><%= review.rating %> stars</p>
+        </div>
+      </div>
     <% } %>
-  </ul>
+</div>
 </div>
 </div>
