--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -51,6 +51,9 @@
           <h5 class="card-title">Jan Doe</h5>
           <p class="card-text"><%= review.comment %></p>
           <p class="card-text"><%= review.rating %> stars</p>
+          <form method="post" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3">
+            <button class="btn btn-dark btn-sm">Delete</button>
+          </form>
         </div>
       </div>
     <% } %>
