--- a/classroom/views/page.ejs
+++ b/classroom/views/page.ejs
@@ -6,7 +6,8 @@
      <title>Document</title>
 </head>
 <body>
-     <%= msg %>
+     <%= success %>
+     <%= error %> 
      <h1>Hello,<%= name %></h1>
 </body>
 </html>
