--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,6 +1,7 @@
 <% layout('/layouts/boilerplate') %>
 
      <body>
+          <%= success %>
           <h3>All Listings </h3>
           <!-- <form action="/listings/new" method="GET">
           <button>Create New Listings</button>
