--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,11 +7,12 @@
   <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
   <div class="card-body">
     <p class="card-text">
-    <%= listing.description %> <br>
-    &#8377;<%= listing.price.toLocaleString("en-IN")%> <br>
-    <%= listing.location %> <br>
-    <%= listing.country %>
-    </p>
+      Owned by<i> <%= listing.owner.username  %></i> </p>
+      <P class="card-text">
+    <%= listing.description %> </P>
+    <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN")%></p>
+    <p class="card-text"></p><%= listing.location %> </p>
+    <p class="card-text"><%= listing.country %></p>
   </div>
 </div>
 
