--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -11,17 +11,25 @@
       <P class="card-text">
     <%= listing.description %> </P>
     <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN")%></p>
-    <p class="card-text"></p><%= listing.location %> </p>
+    <p class="card-text"><%= listing.location %> </p>
     <p class="card-text"><%= listing.country %></p>
   </div>
 </div>
 
 <br>
+<% if(currUser && currUser._id.equals(listing.owner._id)){ %>
+
 <div class="btns">
-<a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+<a href="/listings/<%= listing._id %>/edit" 
+  class="btn btn-dark col-1 offset-3 edit-btn">
+  Edit</a>
+
 
    <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-     <button class="btn btn-dark  offset-5">Delete</button>
+     <button class="btn btn-dark  offset-5">
+      Delete</button>
+
+      <%} %>
  </form>
 </div>
 <hr>
