--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -17,7 +17,7 @@
 </div>
 
 <br>
-
+<% if(currUser && listing.owner._id.equals(currUser._id)){ %>
 <div class="btns">
 <a href="/listings/<%= listing._id %>/edit" 
   class="btn btn-dark col-1 offset-3 edit-btn">
@@ -30,8 +30,12 @@
 
  </form>
 </div>
+<% } %>
 <hr>
+
+
 <div class="col-8 offset-3 mb-3">
+  <% if(currUser){ %>
   <h4>Leave a Review</h4>
   <form action="/listings/<%=listing._id%>/reviews" method="POST" novalidate class="needs-validation">
     <div class="mb-3">
@@ -49,7 +53,8 @@
       <button class="btn btn-dark">Submit</button>
     </div>
   </form>
-  <hr>
+  <% } %>
+  
   <p><b>All Reviews </b></p>
   <div class="row">
    <% for(let review of listing.reviews){ %>
