--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -38,10 +38,25 @@
   <% if(currUser){ %>
   <h4>Leave a Review</h4>
   <form action="/listings/<%=listing._id%>/reviews" method="POST" novalidate class="needs-validation">
-    <div class="mb-3">
-      <label for="rating" class="form-label">Rating</label>
-      <input type="range" min="1" max="5" step="1" id="rating" name="review[rating]" class="form-range">
-    </div>
+    
+
+    <div class="mt-3 mb-3">
+    <fieldset class="starability-slot">
+
+  <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
+  <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+  <label for="first-rate1" title="Terrible">1 star</label>
+  <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+  <label for="first-rate2" title="Not good">2 stars</label>
+  <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+  <label for="first-rate3" title="Average">3 stars</label>
+  <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+  <label for="first-rate4" title="Very good">4 stars</label>
+  <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+  <label for="first-rate5" title="Amazing">5 stars</label>
+</fieldset>
+</div>
+    
     <div class="mb-3">
     <label for="comment" class="form-label">Comment</label>
     <textarea id="comment" name="review[comment]" rows="4" cols="50" class="form-control" required></textarea>
@@ -62,7 +77,8 @@
         <div class="card-body">
           <h5 class="card-title">@<%=review.author.username %></h5>
           <p class="card-text"><%= review.comment %></p>
-          <p class="card-text"><%= review.rating %> stars</p>
+          <p class="starability-result card-text" data-rating="<%= review.rating %>">
+  </p>
           <form method="post" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3">
             <button class="btn btn-dark btn-sm">Delete</button>
           </form>
