--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,8 +1,13 @@
 <% layout("/layouts/boilerplate") %>
 <div class="row mt-3">
      <div class="col-8 offset-2">
-       <h3>Create a New Listing</h3>
-     <form method="post" action="/listings/<%=listing._id %>?_method=PUT" novalidate class="needs-validation">
+       <h3>Edit your Listings</h3>
+     <form method="post"
+       action="/listings/<%=listing._id %>?_method=PUT"
+       novalidate
+        class="needs-validation"
+        enctype="multipart/form-data"
+        >
           <div class="mb-3">
                <label for="title" class="form-label">Title</label>
                <input name="listing[title]" type="text" value="<%=listing.title%>" class="form-control" required>
@@ -14,9 +19,13 @@
              <div class="invalid-feedback">Please enter the description</div>
            </div>
           <div class="mb-3">
-           <label for="image" class="form-label">Image Link</label>
-           <input name="listing[image]" type="text" value="<%=listing.image%>" class="form-control" required>
-            <div class="invalid-feedback">Please enter the image link</div>
+           <label for="image" class="form-label">Upload New Image</label>
+           <input 
+           name="listing[image]" 
+           type="file" 
+           class="form-control" 
+           />
+           
           </div>
           <div class="row">
             <div class="mb-3 col-md-4">
