--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -56,7 +56,18 @@
               <div><i class="fa-solid fa-snowflake"></i></div>
                <p>Artic</p>
           </div>
-          
+     <div>
+          <div class="form-check-reverse form-switch">
+          <input 
+          class="form-check-input"
+           type="checkbox"
+            role="switch" 
+            id="switchCheckDefault">
+          <label 
+          class="form-check-label" 
+          for="switchCheckDefault">Display total after Taxes</label>
+</div> 
+          </div>
      </div>
           <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3" >
                <%for(let listings of allListings){ %>
@@ -75,4 +86,12 @@
                </a>
                <%}%>
           </div> 
-     </body>
+     
+<script>
+     let taxSwitch = document.getElementById("switchCheckDefault");
+     taxSwitch.addEventListener("click",()=>{
+          console.log("clicked");
+          
+     })
+</script>
+
