--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -3,6 +3,7 @@
      #filters{
           display: flex;
           flex-wrap: wrap;
+          align-items: center;
 
      }
      .filter{
@@ -17,6 +18,19 @@
      }
      .filter p{
           font-size: 0.8rem;
+     }
+
+     .tax-info{
+        display: none;
+     }
+     .tax-toggle{
+       border: 1px solid black;
+       border-radius: 1rem;
+       height: 3.25rem;
+       padding: 1rem;
+       margin-left: 5rem;
+       display: flex;
+       align-items: center;
      }
    </style>
      <div id="filters">
@@ -56,7 +70,15 @@
               <div><i class="fa-solid fa-snowflake"></i></div>
                <p>Artic</p>
           </div>
-     <div>
+           <div class="filter">
+          <div><i class="fa-solid fa-igloo"></i></div>
+               <p>Doms</p>
+          </div>
+            <div class="filter">
+              <div><i class="fa-solid fa-sailboat"></i></div>
+               <p>Boats</p>
+          </div>
+     <div class ="tax-toggle">
           <div class="form-check-reverse form-switch">
           <input 
           class="form-check-input"
@@ -78,7 +100,8 @@
                     <div class="card-body">
                          <p class="card-text">
                              <b> <%= listings.title %></b><br>
-                             &#8377;<%= listings.price.toLocaleString("en-IN")%>
+                             &#8377;<%= listings.price.toLocaleString("en-IN")%> /night
+                             <i class="tax-info">&nbsp; &nbsp;+18% GST</i>
 
                          </p>
                     </div>
@@ -90,8 +113,16 @@
 <script>
      let taxSwitch = document.getElementById("switchCheckDefault");
      taxSwitch.addEventListener("click",()=>{
-          console.log("clicked");
+     let taxInfo = document.getElementsByClassName("tax-info");
+     for(info of taxInfo){
+          if(info.style.display != "inline"){
+               info.style.display = "inline";
+          }else{
+          info.style.display = "none";
+          }
+     }
+     
           
-     })
+     });
 </script>
 
